Renamed some concepts
