# restapi/operations/list_pipelines_responses.go
@@ -1,0 +1,61 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/pjotrscholtze/go-buildserver/models"
+)
+
+// ListPipelinesOKCode is the HTTP code returned for type ListPipelinesOK
+const ListPipelinesOKCode int = 200
+
+/*ListPipelinesOK Successful operation
+
+swagger:response listPipelinesOK
+*/
+type ListPipelinesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Pipeline `json:"body,omitempty"`
+}
+
+// NewListPipelinesOK creates ListPipelinesOK with default headers values
+func NewListPipelinesOK() *ListPipelinesOK {
+
+	return &ListPipelinesOK{}
+}
+
+// WithPayload adds the payload to the list pipelines o k response
+func (o *ListPipelinesOK) WithPayload(payload []*models.Pipeline) *ListPipelinesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list pipelines o k response
+func (o *ListPipelinesOK) SetPayload(payload []*models.Pipeline) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListPipelinesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.Pipeline, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
